CostalCloud/force-app/main/default/objects/TestRunJobIDs_Blinds__c.object
<CustomObject>
    <fields>
        <fullName>Error_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installer_Name__c</fullName>
        <label>Installer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Key__c</fullName>
        <externalId>true</externalId>
        <label>Integration Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Message_from_API__c</fullName>
        <label>Message from API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_No__c</fullName>
        <label>Store No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_No__c</fullName>
        <label>Work Order No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TestRunJobIDs Blind</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Integration_Key__c</columns>
        <columns>Processed__c</columns>
        <columns>Error_Checkbox__c</columns>
        <columns>Message_from_API__c</columns>
        <columns>Status_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Work_Order_No__c</columns>
        <columns>Store_No__c</columns>
        <columns>Installer_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>JobID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestRunJobIDs Blinds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>