CostalCloud/force-app/main/default/objects/TestRunJobIDs_Blinds__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Integration_Key__c</columns>
    <columns>Processed__c</columns>
    <columns>Error_Checkbox__c</columns>
    <columns>Message_from_API__c</columns>
    <columns>Status_Code__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Work_Order_No__c</columns>
    <columns>Store_No__c</columns>
    <columns>Installer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>